<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.asel.ej16radiocheckbuttons.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/opcionesFondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewOpciones"
            android:layout_weight="1"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="@string/fondoRojo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxRojo"
            android:layout_weight="1"
            android:textSize="12sp"/>

        <CheckBox
            android:text="@string/transparente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxTransparente"
            android:layout_weight="1"
            android:textSize="12sp" />

        <CheckBox
            android:text="@string/activityVerde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxVerde"
            android:layout_weight="1"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/linearLayoutImage">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">

            <RadioButton
                android:text="@string/centrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonCentrado"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/estirado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonEstirado"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/imageButtonIronMan"
            android:layout_weight="1"
            android:src="@drawable/ironman"
            android:scaleType="fitCenter" />

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/imageButtonCapitanAmerica"
            android:layout_weight="1"
            android:src="@drawable/capitanamerica"
            android:scaleType="fitCenter" />
    </LinearLayout>
</LinearLayout>
